# choo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
docs/development/: architecture-principles.md
docs/examples/: copilot-cli.md  jira-adapter.md  jira-config.yml
src/choo/: __init__.py  cli.py  config.py  models.py  prompts.py
src/choo/adapters/: __init__.py  base.py  factory.py  github.py  jira.py
src/choo/agent_adapters/: __init__.py  base.py  claude.py  copilot.py  factory.py
tests/: __init__.py  test_cli.py  test_config.py  test_copilot_adapter.py  test_jira_adapter.py  test_prompts.py
