[project]
name = "choo"
version = "0.1.0"
description = "An agent orchestration framework for AI-powered development workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Sebastian Kaspari", email = "s.kaspari@gmail.com" }
]
dependencies = [
    "click>=8.1.7",
    "rich>=13.9.4",
    "pyyaml>=6.0.2",
]

[project.scripts]
choo = "choo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
